# flog

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  flog_example.cpp
src/include/: CMakeLists.txt  flog.hpp  flog.hpp.in  flog_config.hpp  flog_exception.hpp
src/tests/: CMakeLists.txt  flog_example.cpp  flog_test.cpp
